log/build_2026-01-28_17-56-19/motor_control/stderr.log
  File "/home/raspi-earth/project_ws/install/motor_control/lib/python3.11/site-packages/motor_control/joint1_node.py", line 38
    ANGLE_TOLERANCE = 0.5  # ถ้ามุมใกล้เคียงเป้าหมายขนาดนี้ ให้ถือว่าโอเค
                          ^
SyntaxError: invalid non-printable character U+00A0

